--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/homemade-lasagna.html">Homemade Lasagna</a></li>
+        <li><a href="./recipes/simple-baked-chicken-breast.html">Simple Baked Chicken Breast</a></li>
+        <li><a href="./recipes/perfect-basic-burger.html">The Perfect Basic Burger</a></li>
     </ul>
 </body>
 </html>
